--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,28 +9,27 @@
       #generalInfo
       class="general-info"
       [ngClass]="{ 'big-font': noPagination }">
-        <div class="d-flex gap-10 align-items-baseline w-100 justify-content-between">
-      <h4 class="general-title">
-        {{ 'chat.generalInformation' | translate }}
-
-      </h4>
-            <div
-                    class="c_info_wrap d-flex justify-content-end"
-                    *ngIf="consultation.consultation.status !== 'closed'">
-                <button
-                        color="primary"
-                        mat-flat-button
-                        (click)="
-                inviteExpert(consultation.consultation.expertInvitationURL)
-              ">
-                    {{ 'chat.inviteExpert' | translate }}
-                </button>
-            </div>
+      <div
+        class="d-flex gap-10 align-items-baseline w-100 justify-content-between">
+        <h4 class="general-title">
+          {{ 'chat.generalInformation' | translate }}
+        </h4>
+        <div
+          class="c_info_wrap d-flex justify-content-end"
+          *ngIf="consultation.consultation.status !== 'closed'">
+          <button
+            color="primary"
+            mat-flat-button
+            (click)="
+              inviteExpert(consultation.consultation.expertInvitationURL)
+            ">
+            {{ 'chat.inviteExpert' | translate }}
+          </button>
         </div>
+      </div>
 
       <div class="general-wrapper">
         <ng-container *ngIf="!isMobile || viewMore">
-
           <div class="c_info_wrap" *ngIf="consultation?.nurse?.firstName">
             <div class="c_info_row_title">
               {{ 'chat.requestedBy' | translate }}
@@ -50,7 +49,8 @@
             <div class="c_info_row_title">
               {{ 'chat.patientFirstnameAndLastname' | translate }}
             </div>
-            <div class="c_info_row_content d-flex align-items-center gap-4 flex-wrap">
+            <div
+              class="c_info_row_content d-flex align-items-center gap-4 flex-wrap">
               <ng-container
                 *ngIf="consultation.consultation.firstName !== 'No firstname'">
                 {{ consultation.consultation.firstName + ' ' }}
@@ -79,7 +79,7 @@
                     consultation.consultation.status !== 'closed' &&
                     !consultation.consultation.flagPatientOnline
                   ">
-                    <mat-icon svgIcon="invite"></mat-icon>
+                  <mat-icon svgIcon="invite"></mat-icon>
                 </button>
               </ng-container>
             </div>
@@ -122,7 +122,7 @@
           <div class="c_info_wrap">
             <div class="c_info_row_title">{{ 'chat.sex' | translate }}</div>
             <div class="c_info_row_content">
-              {{  'inviteForm.' + consultation.consultation.gender | translate }}
+              {{ 'inviteForm.' + consultation.consultation.gender | translate }}
             </div>
           </div>
           <div
@@ -168,21 +168,36 @@
             </div>
           </div>
 
-          <div class="c_info_wrap" *ngIf="consultation && consultation.guest">
-            <div class="c_info_row_title">
-              {{ 'chat.guest' | translate }}
-            </div>
-            <div class="c_info_row_content">
-              {{ consultation.guest.email || consultation.guest.phoneNumber }}
+          @if (consultation && consultation.guest) {
+            <div class="c_info_wrap">
+              <div class="c_info_row_title">
+                {{ 'chat.guest' | translate }}
+              </div>
+              <div class="c_info_row_content">
+                {{ consultation.guest.email || consultation.guest.phoneNumber }}
 
-              <app-status
-                [type]="
-                  consultation.consultation.flagGuestOnline
-                    ? 'online'
-                    : 'offline'
-                "></app-status>
+                <app-status
+                  [type]="
+                    consultation.consultation.flagGuestOnline
+                      ? 'online'
+                      : 'offline'
+                  "></app-status>
+              </div>
             </div>
-          </div>
+          } @else if (consultation && consultation.guestInvite) {
+            <div class="c_info_wrap">
+              <div class="c_info_row_title">
+                {{ 'chat.guest' | translate }}
+              </div>
+              <div class="c_info_row_content">
+                {{
+                  consultation.guestInvite.emailAddress ||
+                    consultation.guestInvite.phoneNumber ||
+                    '-'
+                }}
+              </div>
+            </div>
+          }
 
           <div
             class="c_info_wrap"
@@ -235,7 +250,12 @@
             @if (item.value) {
               <div class="c_info_wrap">
                 <div class="c_info_row_title">
-                    {{ ('metadata.' + item.key | translate) !== ('metadata.' + item.key) ? ('metadata.' + item.key | translate) : item.key }}
+                  {{
+                    ('metadata.' + item.key | translate) !==
+                    'metadata.' + item.key
+                      ? ('metadata.' + item.key | translate)
+                      : item.key
+                  }}
                 </div>
                 <div class="c_info_row_content">
                   {{ item.value }}
@@ -295,17 +315,20 @@
       </div>
     </div>
 
-    <div #scroll [style.height]="overlay ? overlayHeight : chatHeight" class="chat-wrapper">
-        @if (consultation.guest) {
-            <div
-                    class="warning-wrapper"
-                    *ngIf="consultation.consultation.status !== 'closed'"
-                    [ngClass]="{ 'big-font': noPagination }">
-                <p style="background-color: #ffcc00; padding: 14px; font-size: 1.1em">
-                    {{ 'chat.textMessagesOnlySentToPatientWarning' | translate }}
-                </p>
-            </div>
-        }
+    <div
+      #scroll
+      [style.height]="overlay ? overlayHeight : chatHeight"
+      class="chat-wrapper">
+      @if (consultation.guest) {
+        <div
+          class="warning-wrapper"
+          *ngIf="consultation.consultation.status !== 'closed'"
+          [ngClass]="{ 'big-font': noPagination }">
+          <p style="background-color: #ffcc00; padding: 14px; font-size: 1.1em">
+            {{ 'chat.textMessagesOnlySentToPatientWarning' | translate }}
+          </p>
+        </div>
+      }
       <div
         *ngFor="let msg of chatMessages"
         id="{{ msg.id }}"
@@ -335,7 +358,9 @@
                 mat-flat-button
                 (click)="downloadPdf(msg.attachmentsURL, msg.fileName)"
                 type="submit">
-                  <mat-icon aria-hidden="false"  fontIcon="insert_drive_file"></mat-icon>
+                <mat-icon
+                  aria-hidden="false"
+                  fontIcon="insert_drive_file"></mat-icon>
                 {{ msg.fileName || 'Attachment' }}
               </button>
             </div>
