remove cancel tooltip

--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -222,11 +222,7 @@
               *ngIf="!invite.revoking"
               (click)="revokeInvite(invite.id)"
               color="warn"
-              mat-flat-button
-              [matTooltip]="
-                'invitations.cancelThisInvitationToJoinAConsultation'
-                  | translate
-              ">
+              mat-flat-button>
               {{ 'invitations.cancel' | translate }}
             </button>
           </td>
