--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,64 +1,76 @@
-<ng-container>
-    <div class="wrap">
-      <div class="container">
-        <div class="at">&#64; <span>{{ 'forgotPassword.home' | translate }}</span></div>
+<div class="auth-page d-flex">
+    <div class="banner">
+    </div>
+    <div class="auth-main">
+        <ng-container>
+            <div class="wrap">
+                <div class="container">
+                    <div class="at">&#64; <span>{{ 'forgotPassword.home' | translate }}</span></div>
 
-        <form
-          (submit)="forgotPassword()"
-          class="example-form"
-        >
-          <h4>{{ 'forgotPassword.youForgotYourPassword' | translate }}</h4>
-          <p class="center white"><small>{{ 'forgotPassword.fillUpYourEmailAddressBellow' | translate }}</small></p>
+                    <form
+                            (submit)="forgotPassword()"
+                            class="example-form"
+                    >
+                        <h4>{{ 'forgotPassword.youForgotYourPassword' | translate }}</h4>
+                        <p class="center description">
+                            <small>{{ 'forgotPassword.fillUpYourEmailAddressBellow' | translate }}</small></p>
 
-          <section *ngIf="success" class="success">
-            {{ 'forgotPassword.ifTheEmailProvidedExistsInOurDatabase' | translate }}
-          </section>
-          <section *ngIf="!success">
-            <mat-form-field class="example-full-width">
-                <input
-                  [(ngModel)]="email"
-                  matInput
-                  placeholder="{{ 'forgotPassword.emailAddress' | translate }}"
-                  [formControl]="emailFormControl"
-                  [errorStateMatcher]="matcher"
-                />
+                        <section *ngIf="success" class="success">
+                            {{ 'forgotPassword.ifTheEmailProvidedExistsInOurDatabase' | translate }}
+                        </section>
+                        <section *ngIf="!success">
+                            <mat-form-field class="example-full-width">
+                                <input
+                                        [(ngModel)]="email"
+                                        matInput
+                                        placeholder="{{ 'forgotPassword.emailAddress' | translate }}"
+                                        [formControl]="emailFormControl"
+                                        [errorStateMatcher]="matcher"
+                                />
 
-                <mat-error
-                  *ngIf="
+                                <mat-error
+                                        *ngIf="
                     emailFormControl.hasError('email') &&
                     !emailFormControl.hasError('required')
                   "
-                >
-                  {{ 'forgotPassword.pleaseProvideAValidEmail' | translate }}
-                </mat-error>
-                <mat-error *ngIf="emailFormControl.hasError('required')">
-                  {{ 'forgotPassword.email' | translate }} <strong>{{ 'forgotPassword.required' | translate }}</strong>
-                </mat-error>
-              </mat-form-field>
+                                >
+                                    {{ 'forgotPassword.pleaseProvideAValidEmail' | translate }}
+                                </mat-error>
+                                <mat-error *ngIf="emailFormControl.hasError('required')">
+                                    {{ 'forgotPassword.email' | translate }}
+                                    <strong>{{ 'forgotPassword.required' | translate }}</strong>
+                                </mat-error>
+                            </mat-form-field>
 
 
-              <button *ngIf="!loading" color="primary" mat-flat-button type="submit">
-                {{ 'forgotPassword.submit' | translate }}
-              </button>
+                            <button *ngIf="!loading" color="primary" mat-flat-button type="submit">
+                                {{ 'forgotPassword.submit' | translate }}
+                            </button>
 
-              <div class="row center">
-                <a class="white-link" routerLink="/">{{ 'forgotPassword.backToLoginScreen' | translate }}</a>
-              </div>
-          </section>
+                            <div class="row center">
+                                <a class="back-to-login-link"
+                                   routerLink="/">{{ 'forgotPassword.backToLoginScreen' | translate }}</a>
+                            </div>
+                        </section>
 
-        </form>
+                    </form>
 
 
+                    <div class="error--loading">
+                        <div *ngIf="loading" class="loading">
+                            <mat-spinner [diameter]="35"></mat-spinner>
+                        </div>
 
-        <div class="error--loading">
-          <div *ngIf="loading" class="loading">
-            <mat-spinner [diameter]="35"></mat-spinner>
-          </div>
+                        <div *ngIf="error" class="error">
+                            {{ error }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-container>
 
-          <div *ngIf="error" class="error">
-            {{ error }}
-          </div>
-        </div>
-      </div>
     </div>
-  </ng-container>
+</div>
+
+
+
