--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -1,13 +1,26 @@
+.auth-page {
+  display: flex;
+  min-height: 100vh;
+
+  .banner {
+    width: 44%;
+    max-width: 623px;
+    background-size: cover;
+    background-position: bottom;
+    background-image: url("/assets/bg-splash@2x.png");
+  }
+
+  .auth-main {
+    flex-grow: 1;
+  }
+}
+
 .example-form {
   width: 100%;
   min-width: 150px;
   max-width: 500px;
   text-align: center;
-  &.separated {
-    margin-top: 40px;
-    padding-top: 30px;
-    border-top: 1px solid #8ac2e6;
-  }
+
   h4 {
     margin: 10px;
     font-size: 21px;
@@ -37,8 +50,7 @@
   margin-bottom: 63px;
   font-size: 48px;
   text-align: center;
-  color: #ffff;
-
+  color: var(--primary-color);
   font-weight: 800;
 }
 .at > span {
@@ -48,35 +60,17 @@
 
 
 .wrap {
-  width: 100%;
   height: 100%;
-  background-image: url("/assets/bg-splash@2x.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  top: 0;
-  position: fixed;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
-.saml-login {
-  .redirect-btn {
-    margin: auto;
-    display: block;
-    background-color: #ffff;
-    border-radius: 60px;
-    text-align: center;
-    height: 48px;
-    color: var(--primary-color);
-    padding-top: 5px;
-  }
-}
 
 h4 {
-  color: #fff;
   text-align: center;
   margin-bottom: -10px;
+  color: var(--primary-color);
 }
 
 .loading {
@@ -84,7 +78,6 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .error {
@@ -93,17 +86,9 @@ h4 {
   text-align: center;
 }
 
-.resend-btn {
-  margin: auto;
-  display: block;
-  margin-top: 20px;
-  text-align: center;
-  color: white;
-}
 
 .error--loading {
   margin-top: 20px;
-
   min-height: 80px;
 }
 
@@ -121,13 +106,13 @@ h4 {
     text-align: center;
 }
 
-.white {
-    color: white;
+.description {
+    color: var(--primary-color);
 }
 
-.white-link {
+.back-to-login-link {
     display: inline-block;
-    color: white;
+    color: var(--primary-color);
     opacity: 0.8;
 }
 
