--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,108 +1,127 @@
-<ng-container>
-  <div class="wrap">
-    <div class="container">
-      <div class="at">&#64;</div>
+<div class="auth-page d-flex">
+    <div class="banner"></div>
+    <div class="auth-main">
+        <ng-container>
+            <div class="wrap">
+                <div class="container">
+                    <div class="at">&#64;</div>
 
-        <a *ngIf="showSamlLogin" [href]="samlLoginUrl" mat-stroked-button color="primary">
-          {{ 'login.institutionalConnection' | translate }}
-        </a>
+                    <a
+                            *ngIf="showSamlLogin"
+                            [href]="samlLoginUrl"
+                            mat-stroked-button
+                            color="primary">
+                        {{ 'login.institutionalConnection' | translate }}
+                    </a>
 
-        <a *ngIf="showOpenIdLogin" [href]="openIdLoginUrl" mat-stroked-button color="primary">
-          {{ 'login.institutionalConnection' | translate }}
-        </a>
+                    <a
+                            *ngIf="showOpenIdLogin"
+                            [href]="openIdLoginUrl"
+                            mat-stroked-button
+                            color="primary">
+                        {{ 'login.institutionalConnection' | translate }}
+                    </a>
 
-      <form
-        *ngIf="!localLoginToken && showPasswordLogin"
-        (submit)="loginLocal()"
-        class="form-wrapper"
-        [class.separated]="showSamlLogin">
-        <h4 class="login-local-header">
-          {{ 'login.loginWithALocalAccount' | translate }}
-        </h4>
-        <mat-form-field class="example-full-width">
-          <input
-            [(ngModel)]="email"
-            matInput
-            placeholder="{{ 'login.emailAddress' | translate }}"
-            [formControl]="emailFormControl"
-            [errorStateMatcher]="matcher" />
+                    <form
+                            *ngIf="!localLoginToken && showPasswordLogin"
+                            (submit)="loginLocal()"
+                            class="form-wrapper"
+                            [class.separated]="showSamlLogin">
+                        <h4 class="login-local-header">
+                            {{ 'login.loginWithALocalAccount' | translate }}
+                        </h4>
+                        <mat-form-field class="example-full-width">
+                            <input
+                                    [(ngModel)]="email"
+                                    matInput
+                                    placeholder="{{ 'login.emailAddress' | translate }}"
+                                    [formControl]="emailFormControl"
+                                    [errorStateMatcher]="matcher"/>
 
-          <mat-error
-            *ngIf="
-              emailFormControl.hasError('email') &&
-              !emailFormControl.hasError('required')
-            ">
-            {{ 'login.pleaseProvideAValidEmail' | translate }}
-          </mat-error>
-          <mat-error *ngIf="emailFormControl.hasError('required')">
-            {{ 'login.email' | translate }}
-            <strong>{{ 'login.required' | translate }}</strong>
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <input
-            [(ngModel)]="password"
-            matInput
-            placeholder="{{ 'login.password' | translate }}"
-            type="password"
-            [formControl]="passwordFormControl"
-            [errorStateMatcher]="matcher" />
-          <mat-error *ngIf="passwordFormControl.hasError('required')">
-            {{ 'login.password' | translate }}
-            <strong>{{ 'login.required' | translate }}</strong>
-          </mat-error>
-        </mat-form-field>
+                            <mat-error
+                                    *ngIf="
+                  emailFormControl.hasError('email') &&
+                  !emailFormControl.hasError('required')
+                ">
+                                {{ 'login.pleaseProvideAValidEmail' | translate }}
+                            </mat-error>
+                            <mat-error *ngIf="emailFormControl.hasError('required')">
+                                {{ 'login.email' | translate }}
+                                <strong>{{ 'login.required' | translate }}</strong>
+                            </mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="example-full-width">
+                            <input
+                                    [(ngModel)]="password"
+                                    matInput
+                                    placeholder="{{ 'login.password' | translate }}"
+                                    type="password"
+                                    [formControl]="passwordFormControl"
+                                    [errorStateMatcher]="matcher"/>
+                            <mat-error *ngIf="passwordFormControl.hasError('required')">
+                                {{ 'login.password' | translate }}
+                                <strong>{{ 'login.required' | translate }}</strong>
+                            </mat-error>
+                        </mat-form-field>
 
-        <button class="" color="primary" mat-flat-button type="submit">
-          {{ 'login.login' | translate }}
-        </button>
+                        <button class="" color="primary" mat-flat-button type="submit">
+                            {{ 'login.login' | translate }}
+                        </button>
 
-        <div class="row center">
-          <a class="white-link" routerLink="/forgot-password">{{
-            'login.iForgotMyPassword' | translate
-          }}</a>
-        </div>
+                        <div class="row center">
+                            <a class="forgot-password-link" routerLink="/forgot-password">
+                                {{ 'login.iForgotMyPassword' | translate }}
+                            </a>
+                        </div>
+                        <div class="language-selector-wrapper">
+                            <app-language-selector></app-language-selector>
+                        </div>
+                    </form>
+                    <form
+                            *ngIf="localLoginToken"
+                            (submit)="loginSms()"
+                            class="form-wrapper">
+                        <h4 class="login-local-header">
+                            {{ 'login.pleaseFillUpTheRecievedSMS' | translate }}
+                        </h4>
+                        <mat-form-field class="example-full-width">
+                            <input
+                                    [(ngModel)]="smsVerificationCode"
+                                    matInput
+                                    placeholder="{{ 'login.verificationCode' | translate }}"
+                                    [formControl]="codeFormControl"
+                                    [errorStateMatcher]="matcher"
+                                    name="verificationCode"/>
 
-        <app-select-language></app-select-language>
-      </form>
-      <form *ngIf="localLoginToken" (submit)="loginSms()" class="form-wrapper">
-        <h4 class="login-local-header">{{ 'login.pleaseFillUpTheRecievedSMS' | translate }}</h4>
-          <mat-form-field class="example-full-width">
-            <input
-              [(ngModel)]="smsVerificationCode"
-              matInput
-              placeholder="{{ 'login.verificationCode' | translate }}"
-              [formControl]="codeFormControl"
-              [errorStateMatcher]="matcher"
-              name="verificationCode" />
+                            <mat-error *ngIf="codeFormControl.hasError('required')">
+                                {{ 'login.verificationCode' | translate }}
+                                <strong>{{ 'login.required' | translate }}</strong>
+                            </mat-error>
+                        </mat-form-field>
 
-            <mat-error *ngIf="codeFormControl.hasError('required')">
-              {{ 'login.verificationCode' | translate }}
-              <strong>{{ 'login.required' | translate }}</strong>
-            </mat-error>
-          </mat-form-field>
+                        <button color="primary" mat-flat-button type="submit">
+                            {{ 'login.send' | translate }}
+                        </button>
+                    </form>
 
-        <button color="primary" mat-flat-button type="submit">
-          {{ 'login.send' | translate }}
-        </button>
-      </form>
+                    <button
+                            *ngIf="localLoginToken"
+                            (click)="loginLocal()"
+                            class="resend-btn"
+                            mat-button>
+                        {{ 'login.sendCodeAgain' | translate }}
+                    </button>
+                    <div class="error--loading">
+                        <div *ngIf="loading" class="loading">
+                            <mat-spinner [diameter]="35"></mat-spinner>
+                        </div>
 
-      <button
-        *ngIf="localLoginToken"
-        (click)="loginLocal()"
-        class="resend-btn"
-        mat-button>
-        {{ 'login.sendCodeAgain' | translate }}
-      </button>
-      <div class="error--loading">
-        <div *ngIf="loading" class="loading">
-          <mat-spinner [diameter]="35"></mat-spinner>
-        </div>
-
-        <div *ngIf="error" class="error">
-          {{ error }}
-        </div>
-      </div>
+                        <div *ngIf="error" class="error">
+                            {{ error }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-container>
     </div>
-  </div>
-</ng-container>
+</div>
