--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,120 +1,128 @@
-<ng-container>
-  <div class="wrap">
-    <div class="container">
-      <div class="at">
-        <img
-          class="logo"
-          *ngIf="configService.config.logo"
-          [src]="configService.config.logo"
-          alt="@"
-        />
-        <span *ngIf="!configService.config.logo">{{
-          configService.config.branding
-        }}</span>
-      </div>
+<div class="auth-page d-flex">
+    <div class="banner">
+    </div>
+    <div class="auth-main">
+        <ng-container>
+            <div class="wrap">
+                <div class="container">
+                    <div class="at">
+                        <img
+                                class="logo"
+                                *ngIf="configService.config.logo"
+                                [src]="configService.config.logo"
+                                alt="@"
+                        />
+                        <span *ngIf="!configService.config.logo">{{
+                                configService.config.branding
+                            }}</span>
+                    </div>
 
-      <form
-        (submit)="resetPassword()"
-        class="example-form reset-password-form"
-        [formGroup]="resetPasswordForm"
-      >
-        <h4>{{ "resetPassword.changePassword" | translate }}</h4>
-        <p class="center white" *ngIf="!success">
-          <small>{{ "resetPassword.youAreOnThisPage" | translate }}</small>
-        </p>
+                    <form
+                            (submit)="resetPassword()"
+                            class="example-form reset-password-form"
+                            [formGroup]="resetPasswordForm"
+                    >
+                        <h4>{{ "resetPassword.changePassword" | translate }}</h4>
+                        <p class="center description" *ngIf="!success">
+                            <small>{{ "resetPassword.youAreOnThisPage" | translate }}</small>
+                        </p>
 
-        <section *ngIf="success">
-          <p class="success">
-            {{ "resetPassword.yourPasswordHasBeenUpdated" | translate }}
-          </p>
+                        <section *ngIf="success">
+                            <p class="success">
+                                {{ "resetPassword.yourPasswordHasBeenUpdated" | translate }}
+                            </p>
 
-          <button routerLink="/" class="submit-btn" mat-button>
-            {{ "resetPassword.login" | translate }}
-          </button>
-        </section>
+                            <button routerLink="/" class="submit-btn" mat-button>
+                                {{ "resetPassword.login" | translate }}
+                            </button>
+                        </section>
 
-        <section *ngIf="!success">
-          <mat-form-field class="example-full-width">
-            <input
-              matInput
-              placeholder="{{ 'resetPassword.newPassword' | translate }}"
-              formControlName="password"
-              type="password"
-            />
-            <mat-error
-              *ngIf="resetPasswordForm.get('password').hasError('pattern')"
-            >
-              {{ "resetPassword.passwordQualityTooLow" | translate }}
-            </mat-error>
-            <mat-error
-              *ngIf="resetPasswordForm.get('password').hasError('required')"
-            >
-              {{ "resetPassword.password" | translate }}
-              <strong>{{ "resetPassword.required" | translate }}</strong>
-            </mat-error>
-          </mat-form-field>
+                        <section *ngIf="!success">
+                            <mat-form-field class="example-full-width">
+                                <input
+                                        matInput
+                                        placeholder="{{ 'resetPassword.newPassword' | translate }}"
+                                        formControlName="password"
+                                        type="password"
+                                />
+                                <mat-error
+                                        *ngIf="resetPasswordForm.get('password').hasError('pattern')"
+                                >
+                                    {{ "resetPassword.passwordQualityTooLow" | translate }}
+                                </mat-error>
+                                <mat-error
+                                        *ngIf="resetPasswordForm.get('password').hasError('required')"
+                                >
+                                    {{ "resetPassword.password" | translate }}
+                                    <strong>{{ "resetPassword.required" | translate }}</strong>
+                                </mat-error>
+                            </mat-form-field>
 
-          <mat-form-field class="example-full-width">
-            <input
-              matInput
-              placeholder="Confirmation du mot de passe"
-              formControlName="confirmPassword"
-              type="password"
-            />
-            <mat-error
-              *ngIf="
+                            <mat-form-field class="example-full-width">
+                                <input
+                                        matInput
+                                        placeholder="Confirmation du mot de passe"
+                                        formControlName="confirmPassword"
+                                        type="password"
+                                />
+                                <mat-error
+                                        *ngIf="
                 resetPasswordForm.get('confirmPassword').valid &&
                 !resetPasswordForm.get('confirmPassword').hasError('required')
               "
-            >
-              {{ "resetPassword.passwordQualityTooLow" | translate }}
-            </mat-error>
-            <mat-error
-              *ngIf="
+                                >
+                                    {{ "resetPassword.passwordQualityTooLow" | translate }}
+                                </mat-error>
+                                <mat-error
+                                        *ngIf="
                 resetPasswordForm.get('confirmPassword').hasError('mustMatch')
               "
-            >
-              {{ "resetPassword.theBothPasswordAreNotTheSame" | translate }}
-            </mat-error>
-            <mat-error
-              *ngIf="
+                                >
+                                    {{ "resetPassword.theBothPasswordAreNotTheSame" | translate }}
+                                </mat-error>
+                                <mat-error
+                                        *ngIf="
                 resetPasswordForm.get('confirmPassword').hasError('required')
               "
-            >
-              {{ "resetPassword.password" | translate }}
-              <strong>{{ "resetPassword.required" | translate }}</strong>
-            </mat-error>
-          </mat-form-field>
+                                >
+                                    {{ "resetPassword.password" | translate }}
+                                    <strong>{{ "resetPassword.required" | translate }}</strong>
+                                </mat-error>
+                            </mat-form-field>
 
-          <button *ngIf="!loading"  color="primary" mat-flat-button type="submit">
-            {{ "resetPassword.save" | translate }}
-          </button>
+                            <button *ngIf="!loading"  color="primary" mat-flat-button type="submit">
+                                {{ "resetPassword.save" | translate }}
+                            </button>
 
-          <div class="row center">
-            <a class="white-link" routerLink="/">{{
-              "resetPassword.backToLoginScreen" | translate
-            }}</a>
-          </div>
-        </section>
-      </form>
+                            <div class="row center">
+                                <a class="back-to-login-link" routerLink="/">{{
+                                        "resetPassword.backToLoginScreen" | translate
+                                    }}</a>
+                            </div>
+                        </section>
+                    </form>
 
-      <div class="error--loading">
-        <div *ngIf="loading" class="loading">
-          <mat-spinner [diameter]="35"></mat-spinner>
-        </div>
+                    <div class="error--loading">
+                        <div *ngIf="loading" class="loading">
+                            <mat-spinner [diameter]="35"></mat-spinner>
+                        </div>
 
-        <ng-container *ngIf="error" [ngSwitch]="error">
-          <div *ngSwitchCase="'token-expired'" class="error">
-            {{ "resetPassword.yourTokenHasExpired" | translate }}
-            <a routerLink="/forgot-password">{{
-              "resetPassword.iForgotMyPassword" | translate
-            }}</a>
-          </div>
-          <div *ngSwitchDefault class="error">
-            {{ "resetPassword.anUnknownErrorHasBeenEncountered" | translate }}
-          </div>
+                        <ng-container *ngIf="error" [ngSwitch]="error">
+                            <div *ngSwitchCase="'token-expired'" class="error">
+                                {{ "resetPassword.yourTokenHasExpired" | translate }}
+                                <a routerLink="/forgot-password">{{
+                                        "resetPassword.iForgotMyPassword" | translate
+                                    }}</a>
+                            </div>
+                            <div *ngSwitchDefault class="error">
+                                {{ "resetPassword.anUnknownErrorHasBeenEncountered" | translate }}
+                            </div>
+                        </ng-container>
+                    </div>
+                </div>
+            </div>
         </ng-container>
-      </div>
     </div>
-  </div>
-</ng-container>
+</div>
+
+
