--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -1,14 +1,25 @@
+.auth-page {
+  display: flex;
+  min-height: 100vh;
+
+  .banner {
+    width: 44%;
+    max-width: 623px;
+    background-size: cover;
+    background-position: bottom;
+    background-image: url("/assets/bg-splash@2x.png");
+  }
+
+  .auth-main {
+    flex-grow: 1;
+  }
+}
+
 
 .example-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
-
-  &.separated {
-    margin-top: 40px;
-    padding-top: 30px;
-    border-top: 1px solid #8ac2e6;
-  }
 
   h4 {
     margin: 10px;
@@ -32,8 +43,7 @@
   margin-bottom: 63px;
   font-size: 48px;
   text-align: center;
-  color: #ffff;
-
+  color: var(--primary-color);
   font-weight: 800;
 }
 
@@ -42,24 +52,15 @@
   font-size: 16px;
 }
 
-ng-container {
-}
-
 .wrap {
-  top: 0;
-  width: 100%;
   height: 100%;
   display: flex;
-  position: fixed;
   align-items: center;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("/assets/bg-splash@2x.png");
+  justify-content: center;
 }
 
 h4 {
-  color: #fff;
+  color: var(--primary-color);
   text-align: center;
   margin-bottom: -10px;
 }
@@ -68,23 +69,13 @@ h4 {
   margin: auto;
   display: block;
   margin-top: 50px;
-  background-color: #ffff;
+  background-color: var(--primary-color);
   border-radius: 60px;
   text-align: center;
   width: 160px;
   height: 48px;
   color: var(--primary-color);
 }
-
-input {
-  color: white;
-  caret-color: white;
-}
-
-mat-form-field {
-  margin: 20px auto;
-}
-
 
 .loading {
   display: flex;
@@ -118,31 +109,19 @@ mat-form-field {
   text-align: center;
 }
 
-.white {
-  color: white;
+.description {
+  color: var(--primary-color);
 }
 
-.white-link {
+.back-to-login-link {
   display: inline-block;
-  color: white;
+  color: var(--primary-color);
   opacity: 0.8;
 }
 
 .success {
   background-color: white;
   padding: 30px;
-  color: var(--primary-color);
-}
-
-.submit-btn {
-  margin: auto;
-  display: block;
-  margin-top: 50px;
-  background-color: #ffff;
-  border-radius: 60px;
-  text-align: center;
-  width: 160px;
-  height: 48px;
   color: var(--primary-color);
 }
 
