fix login button after success reset

--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -32,7 +32,7 @@
                                 {{ "resetPassword.yourPasswordHasBeenUpdated" | translate }}
                             </p>
 
-                            <button routerLink="/" class="submit-btn" mat-button>
+                            <button routerLink="/" color="primary" mat-flat-button>
                                 {{ "resetPassword.login" | translate }}
                             </button>
                         </section>
