Fix metadata check to handle both null and empty object cases

--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -158,7 +158,9 @@
                 </span>
                 <ng-container
                   *ngIf="
-                    consultation.consultation.metadata === null;
+                    consultation.consultation.metadata === null ||
+                      Object.keys(consultation.consultation.metadata).length ===
+                        0;
                     else metanull
                   ">
                   -
