add global error handling

--- a/src/app/error-dialog/error-dialog.component.html
+++ b/src/app/error-dialog/error-dialog.component.html
@@ -6,7 +6,6 @@
     </div>
 </div>
 <div mat-dialog-actions class="buttons-wrapper">
-    <button class="btn__cancel"
-            mat-button mat-dialog-close>OK
+    <button mat-button mat-dialog-close>OK
     </button>
 </div>
