--- a/src/app/error-dialog/error-dialog.component.html
+++ b/src/app/error-dialog/error-dialog.component.html
@@ -1,11 +1,14 @@
-<h1 mat-dialog-title> {{data.title}}</h1>
+<h1 mat-dialog-title>{{ data.title }}</h1>
 <div mat-dialog-content>
-    <div class="image-wrapper">
-        <mat-icon class="icon" svgIcon="fail"></mat-icon>
-        <p class="error-message">{{data.message}}</p>
-    </div>
+  <div class="image-wrapper">
+    @if (data.isHtml) {
+      <div [innerHTML]="safeHtml"></div>
+    } @else {
+      <mat-icon class="icon" svgIcon="fail"></mat-icon>
+      <p class="error-message">{{ data.message }}</p>
+    }
+  </div>
 </div>
 <div mat-dialog-actions class="buttons-wrapper">
-    <button mat-button mat-dialog-close>OK
-    </button>
+  <button mat-button mat-dialog-close>OK</button>
 </div>
