--- a/src/app/consultation/consultation.component.scss
+++ b/src/app/consultation/consultation.component.scss
@@ -8,6 +8,26 @@
   }
 }
 
+.other-doctor-in-call {
+  gap: 8px;
+  display: flex;
+  color: #666;
+  border-radius: 4px;
+  padding: 12px 24px;
+  align-items: center;
+  background-color: #f5f5f5;
+
+  mat-icon {
+    color: #666;
+    width: auto;
+    height: auto;
+  }
+
+  span {
+    font-size: 14px;
+  }
+}
+
 .call-wrap {
   flex: 1;
   min-height: 165px;
