add not found page, change video call button apearing functionality, change link color in messages

--- a/src/app/consultation/consultation.component.html
+++ b/src/app/consultation/consultation.component.html
@@ -57,10 +57,10 @@
         </button>
 
         <button
-          (click)="makeCall(false)"
+          (click)="initiateVideoCall()"
           mat-raised-button
           color="primary"
-          *ngIf="videoDevices.length > 0 && !currentCall && !otherDoctorInCall">
+          *ngIf="!currentCall && !otherDoctorInCall">
           <mat-icon svgIcon="camera"></mat-icon>
           &nbsp;&nbsp;
           {{ 'consultation.videoCall' | translate }}
