--- a/src/app/webview-warning/webview-warning.component.scss
+++ b/src/app/webview-warning/webview-warning.component.scss
@@ -23,6 +23,20 @@
   margin-bottom: 16px;
 }
 
+.url-container {
+  margin-bottom: 16px;
+}
+
+.url-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background: #f5f5f5;
+  box-sizing: border-box;
+}
+
 [mat-dialog-actions] {
   justify-content: center;
 }
